Number buttons working

--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
 			<button class="equal-btn">=</button>
 			<button class="erase-btn">erase</button>
 			<button class="clear-btn">clear</button>
-			<button class="one-btn">1</button>
-			<button class="two-btn">2</button>
-			<button class="three-btn">3</button>
-			<button class="four-btn">4</button>
-			<button class="five-btn">5</button>
-			<button class="six-btn">6</button>
-			<button class="seven-btn">7</button>
-			<button class="eight-btn">8</button>
-			<button class="nine-btn">9</button>
-			<button class="zero-btn">0</button>
+			<button class="num-btn">1</button>
+			<button class="num-btn">2</button>
+			<button class="num-btn">3</button>
+			<button class="num-btn">4</button>
+			<button class="num-btn">5</button>
+			<button class="num-btn">6</button>
+			<button class="num-btn">7</button>
+			<button class="num-btn">8</button>
+			<button class="num-btn">9</button>
+			<button class="num-btn">0</button>
 		</div>
 	</div>
 	<script src="scripts.js"></script>
