--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 			<div class="previous-number"></div>
 		</div>
 		<div class="buttons-container">
-			<button class="plus-btn">+</button>
-			<button class="reduce-btn">-</button>
-			<button class="multiply-btn">*</button>
-			<button class="divide-btn">÷</button>
-			<button class="equal-btn">=</button>
-			<button class="erase-btn">erase</button>
-			<button class="clear-btn">clear</button>
+			<button class="operation-btn">+</button>
+			<button class="operation-btn">-</button>
+			<button class="operation-btn">*</button>
+			<button class="operation-btn">÷</button>
+			<button class="operation-btn">=</button>
+			<button class="operation-btn">erase</button>
+			<button class="operation-btn">clear</button>
 			<button class="num-btn">1</button>
 			<button class="num-btn">2</button>
 			<button class="num-btn">3</button>
