--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 	<h1>Calculator</h1>
 	<div class="calculator-container">
 		<div class="display">
-			<div class="current-number"></div>
 			<div class="previous-number"></div>
+			<div class="current-number"></div>
 		</div>
 		<div class="buttons-container">
 			<button class="operation-btn">+</button>
 			<button class="operation-btn">-</button>
 			<button class="operation-btn">*</button>
 			<button class="operation-btn">÷</button>
-			<button class="operation-btn">=</button>
-			<button class="operation-btn">erase</button>
-			<button class="operation-btn">clear</button>
+			<button class="equal-btn">=</button>
+			<button class="erase-btn">erase</button>
+			<button class="clear-btn">clear</button>
 			<button class="num-btn">1</button>
 			<button class="num-btn">2</button>
 			<button class="num-btn">3</button>
