--- a/index.html
+++ b/index.html
@@ -14,23 +14,34 @@
 			<div class="current-number"></div>
 		</div>
 		<div class="buttons-container">
-			<button class="operation-btn">+</button>
-			<button class="operation-btn">-</button>
-			<button class="operation-btn">*</button>
-			<button class="operation-btn">÷</button>
-			<button class="equal-btn">=</button>
-			<button class="erase-btn">erase</button>
-			<button class="clear-btn">clear</button>
-			<button class="num-btn">1</button>
-			<button class="num-btn">2</button>
-			<button class="num-btn">3</button>
-			<button class="num-btn">4</button>
-			<button class="num-btn">5</button>
-			<button class="num-btn">6</button>
-			<button class="num-btn">7</button>
-			<button class="num-btn">8</button>
-			<button class="num-btn">9</button>
-			<button class="num-btn">0</button>
+			<div class="first-row">
+				<button class="erase-btn">erase</button>
+				<button class="clear-btn">clear</button>
+			</div>
+			<div class="second-row">
+				<button class="num-btn">7</button>
+				<button class="num-btn">8</button>
+				<button class="num-btn">9</button>
+				<button class="operation-btn">+</button>
+			</div>
+			<div class="third-row">
+				<button class="num-btn">4</button>
+				<button class="num-btn">5</button>
+				<button class="num-btn">6</button>
+				<button class="operation-btn">-</button>
+			</div>
+			<div class="fourth-row">
+				<button class="num-btn">1</button>
+				<button class="num-btn">2</button>
+				<button class="num-btn">3</button>
+				<button class="operation-btn">*</button>
+			</div>
+			<div class="fifth-row">
+				<button class="num-btn">0</button>
+				<button class="dot-btn">.</button>
+				<button class="equal-btn">=</button>
+				<button class="operation-btn">÷</button>
+			</div>
 		</div>
 	</div>
 	<script src="scripts.js"></script>
