--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			</div>
 			<div class="fifth-row">
 				<button class="num-btn">0</button>
-				<button class="dot-btn">.</button>
+				<button class="num-btn">.</button>
 				<button class="equal-btn">=</button>
 				<button class="operation-btn">+</button>
 			</div>
